INTEGRATION: CWS qadev20 (1.5.58); FILE MERGED 2004/11/22 12:30:05 sg 1.5.58.1: #i37187#CHG: removed functions that were not jdk131 compatible